--- a/package.json
+++ b/package.json
@@ -20,10 +20,21 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@progress/kendo-angular-buttons": "^4.1.3",
+    "@progress/kendo-angular-dateinputs": "^3.4.4",
+    "@progress/kendo-angular-dropdowns": "^3.0.3",
+    "@progress/kendo-angular-excel-export": "^2.1.2",
+    "@progress/kendo-angular-grid": "^3.7.1",
+    "@progress/kendo-angular-inputs": "^3.2.1",
+    "@progress/kendo-angular-intl": "^1.5.0",
+    "@progress/kendo-angular-l10n": "^1.2.0",
+    "@progress/kendo-angular-pdf-export": "^1.1.2",
+    "@progress/kendo-data-query": "^1.5.0",
+    "@progress/kendo-drawing": "^1.5.7",
     "core-js": "^2.4.1",
     "ng4-currency-mask": "^1.0.3",
     "ngx-currency": "^1.5.0",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.5.12",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
