--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@progress/kendo-data-query": "^1.5.0",
     "@progress/kendo-drawing": "^1.5.7",
     "core-js": "^2.4.1",
+    "ng2-pdf-viewer": "^5.1.2",
     "ng4-currency-mask": "^1.0.3",
     "ngx-currency": "^1.5.0",
     "rxjs": "^5.5.12",
